--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,16 +116,22 @@ header {
 }
 .overlay {
     position:fixed;
-    width:100%;
-    height:100vh;
+    width:0;
+    height:100%;
     top:0;
-    left:0;
+    left:-100;
     background-color:rgba(0,0,0,0);
-    transition:all .4s ease-in-out;
+    transition:all .1s ease-in;
+    
 }
 .overlay.on {
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:100;
     background-color:rgba(0,0,0,.4);
-    transition:all .6s ease-in-out;
+    transition:background-color .6s linear;
 }
 .main-header {
     text-align:center;
